docs/examples/production-ready/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: rabbitmq
  name: rabbitmq-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: prometheus
      protocol: TCP
      port: 15692
      targetPort: 15692
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
  selector:
    app: sovos-rabbitmq
